--- a/public/css/skin.css
+++ b/public/css/skin.css
@@ -1,11 +1,40 @@
 
+/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
+
+html {
+    overflow: -moz-scrollbars-vertical; 
+    overflow-y: scroll;
+}
 body {
+    font-family: "Lucida Console", Monaco, monospace;
     background: #ccc;
 }
 
 h1 {
-    font-family: "Lucida Console", Monaco, monospace;
+    margin: 20px 0;
     text-align: center;
+    font-size: 32px;
+    font-weight: bold;
+}
+h2 {
+    margin: 20px 0;
+    font-size: 18px;
+}
+
+#menu {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    width: 300px;
+    margin: 50px 0 0 -150px;
+    padding: 20px 0 40px;
+    background: #ddd;
+    text-align: center;
+}
+#menu button.new-game {
+    padding: 15px 30px;
+    font-size: 16px;
 }
 
 #board {
